[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resources/Sprites/menu.png" type="Texture" id=1]
[ext_resource path="res://Fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Resources/Sprites/button.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/button_one.png" type="Texture" id=4]
[ext_resource path="res://Scenes/settings.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 230, 68 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 230, 68 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 230, 68 )

[sub_resource type="DynamicFont" id=5]
size = 42
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
margin_left = 4.0
margin_top = 8.0
margin_right = 245.0
margin_bottom = 111.0
rect_min_size = Vector2( 136, 79 )
custom_fonts/font = SubResource( 1 )
text = "Settings"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="music" type="Button" parent="."]
margin_left = 12.0
margin_top = 263.0
margin_right = 326.0
margin_bottom = 327.0
rect_scale = Vector2( 0.733333, 1.215 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="m_on" type="Label" parent="music"]
margin_left = 13.6137
margin_top = 2.27982
margin_right = 179.614
margin_bottom = 50.2798
rect_scale = Vector2( 1.49091, 1.09877 )
custom_fonts/font = SubResource( 5 )
text = "music on"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="m_off" type="Label" parent="music"]
visible = false
margin_left = 13.6137
margin_top = 2.27982
margin_right = 179.614
margin_bottom = 50.2798
rect_scale = Vector2( 1.49091, 1.09877 )
custom_fonts/font = SubResource( 5 )
text = "music off"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="sound" type="Button" parent="."]
margin_left = 12.0
margin_top = 350.0
margin_right = 326.0
margin_bottom = 414.0
rect_scale = Vector2( 0.733333, 1.215 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="s_on" type="Label" parent="sound"]
margin_left = 18.7955
margin_top = 3.06171
margin_right = 184.795
margin_bottom = 51.0617
rect_scale = Vector2( 1.49091, 1.09877 )
custom_fonts/font = SubResource( 5 )
text = "Sound on"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="s_off" type="Label" parent="sound"]
visible = false
margin_left = 18.7955
margin_top = 3.06171
margin_right = 184.795
margin_bottom = 51.0617
rect_scale = Vector2( 1.49091, 1.09877 )
custom_fonts/font = SubResource( 5 )
text = "Sound off"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}
[connection signal="pressed" from="music" to="." method="_on_music_pressed"]
[connection signal="pressed" from="sound" to="." method="_on_sound_pressed"]
